# phi-adapter-sdk-qt

./: .gitignore  CMakeLists.txt  README.md
cmake/: phi-adapter-sdk-qtConfig.cmake.in
debian/: changelog  control  phi-adapter-sdk-qt-dev.install  phi-adapter-sdk-qt.install  phi-adapter-sdk-qt.substvars  rules
debian/phi-adapter-sdk-qt-dev/DEBIAN/: control  md5sums
debian/phi-adapter-sdk-qt-dev/usr/include/phi/adapter/sdk/qt/: instance_execution_backend_qt.h
debian/phi-adapter-sdk-qt-dev/usr/lib/aarch64-linux-gnu/cmake/phi-adapter-sdk-qt/: phi-adapter-sdk-qtConfig.cmake  phi-adapter-sdk-qtTargets-none.cmake  phi-adapter-sdk-qtTargets.cmake
debian/phi-adapter-sdk-qt-dev/usr/share/doc/phi-adapter-sdk-qt-dev/: copyright
debian/phi-adapter-sdk-qt/DEBIAN/: control  md5sums  shlibs
debian/phi-adapter-sdk-qt/usr/lib/aarch64-linux-gnu/: libphi_adapter_sdk_qt.so.0  libphi_adapter_sdk_qt.so.0.1.3
examples/: qthread_usage_example.cpp
src/qt/: instance_execution_backend_qt.cpp
